--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,3 +4,10 @@
 
 @import "modules/msk_colors";
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-    ng-cloak {
+    display: none !important;
+}
+
+#angular-container {
+
+}
