--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,6 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css";
-@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
+@import "https://use.fontawesome.com/releases/v5.0.12/css/all.css";
+// @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 @import "core/msk_colors";
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -8,7 +9,7 @@
 
 #angular-container {
 	@import "core/globals";
-// @import "./node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-// @import "core/responsivemedia";
+	// @import "./node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+	// @import "core/responsivemedia";
 
 }
