--- a/sass/core/msk_colors.scss
+++ b/sass/core/msk_colors.scss
@@ -42,3 +42,260 @@ $green3: #327949;
 $turquoise1: #D5E5B1;
 $turquoise2: #27A89F;
 $turquoise3: #257D7F;
+
+
+.msk-blue-text {
+    color: $msk_blue;
+}
+
+.msk-orange-text {
+    color: $msk_orange;
+}
+
+.msk-beige-text {
+    color: $msk_beige;
+}
+
+.msk-gray-text {
+    color: $msk_gray;
+}
+
+.msk-medgray-text {
+    color: $msk_med_gray;
+}
+
+.msk-lightgray-text {
+    color: $msk_light_gray;
+}
+
+.black-text {
+    color: $black;
+}
+
+.white-text {
+    color: $white;
+}
+
+.blue1-text {
+    color: $blue1;
+}
+
+.blue2-text {
+    color: $blue2;
+}
+
+.blue3-text {
+    color: $blue3;
+}
+
+.orange1-text {
+    color: $orange1;
+}
+
+.orange2-text {
+    color: $orange2;
+}
+
+.orange3-text {
+    color: $orange3;
+}
+
+.violet1-text {
+    color: $violet1;
+}
+
+.violet2-text {
+    color: $violet2;
+}
+
+.violet3-text {
+    color: $violet3;
+}
+
+.magenta1-text {
+    color: $magenta1;
+}
+
+.magenta2-text {
+    color: $magenta2;
+}
+
+.magenta3-text {
+    color: $magenta3;
+}
+
+.sienne1-text {
+    color: $sienne1;
+}
+
+.sienne2-text {
+    color: $sienne2;
+}
+
+.sienne3-text {
+    color: $sienne3;
+}
+
+.yellow1-text {
+    color: $yellow1;
+}
+
+.yellow2-text {
+    color: $yellow2;
+}
+
+.yellow3-text {
+    color: $yellow3;
+}
+
+.green1-text {
+    color: $green1;
+}
+
+.green2-text {
+    color: $green2;
+}
+
+.green3-text {
+    color: $green3;
+}
+
+.turquoise1-text {
+    color: $turquoise1;
+}
+
+.turquoise2-text {
+    color: $turquoise2;
+}
+
+.turquoise3-text {
+    color: $turquoise3;
+}
+
+.msk-blue-bg {
+    background: $msk_blue;
+}
+
+.msk-orange-bg {
+    background: $msk_orange;
+}
+
+.msk-beige-bg {
+    background: $msk_beige;
+}
+
+.msk-gray-bg {
+    background: $msk_gray;
+}
+
+.msk-medgray-bg {
+    background: $msk_med_gray;
+}
+
+.msk-lightgray-bg {
+    background: $msk_light_gray;
+}
+
+.black-bg {
+    background: $black;
+}
+
+.white-bg {
+    background: $white;
+}
+
+.blue1-bg {
+    background: $blue1;
+}
+
+.blue2-bg {
+    background: $blue2;
+}
+
+.blue3-bg {
+    background: $blue3;
+}
+
+.orange1-bg {
+    background: $orange1;
+}
+
+.orange2-bg {
+    background: $orange2;
+}
+
+.orange3-bg {
+    background: $orange3;
+}
+
+.violet1-bg {
+    background: $violet1;
+}
+
+.violet2-bg {
+    background: $violet2;
+}
+
+.violet3-bg {
+    background: $violet3;
+}
+
+.magenta1-bg {
+    background: $magenta1;
+}
+
+.magenta2-bg {
+    background: $magenta2;
+}
+
+.magenta3-bg {
+    background: $magenta3;
+}
+
+.sienne1-bg {
+    background: $sienne1;
+}
+
+.sienne2-bg {
+    background: $sienne2;
+}
+
+.sienne3-bg {
+    background: $sienne3;
+}
+
+.yellow1-bg {
+    background: $yellow1;
+}
+
+.yellow2-bg {
+    background: $yellow2;
+}
+
+.yellow3-bg {
+    background: $yellow3;
+}
+
+.green1-bg {
+    background: $green1;
+}
+
+.green2-bg {
+    background: $green2;
+}
+
+.green3-bg {
+    background: $green3;
+}
+
+.turquoise1-bg {
+    background: $turquoise1;
+}
+
+.turquoise2-bg {
+    background: $turquoise2;
+}
+
+.turquoise3-bg {
+    background: $turquoise3;
+}
