--- a/sass/app.scss
+++ b/sass/app.scss
@@ -11,5 +11,6 @@
 	@import "core/globals";
 	// @import "./node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 	// @import "core/responsivemedia";
+	// @import "_partials/pagination.component";
 
 }
