--- a/public/views/components/pagination.html
+++ b/public/views/components/pagination.html
@@ -1,4 +1,4 @@
-<nav>
+<nav ng-show="totalItemCount > 0">
   <ul class="pagination">
     <li><a ng-click="selectPage(1)">First</a>
     </li><li><a ng-click="selectPage(currentPage - 1)"><i class="fa fa-caret-left" aria-hidden="true"></i></a>
