update pagination to work with bootstrap 4

--- a/public/views/components/pagination.html
+++ b/public/views/components/pagination.html
@@ -1,13 +1,10 @@
 <nav ng-show="totalItemCount > 0">
-    <ul class="pagination">
-        <li><a ng-click="selectPage(1)">First</a> </li>
-        <li><a ng-click="selectPage(currentPage - 1)"><i class="fa fa-caret-left" aria-hidden="true"></i></a>
-        </li>
-        <li><a><page-select></page-select> of <span ng-bind="numPages"></span></a>
-        </li>
-        <li><a ng-click="selectPage(currentPage + 1)"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
-        </li>
-        <li><a ng-click="selectPage(numPages)">Last</a></li>
+    <ul class="pagination d-flex justify-content-center">
+        <li class="page-item"><a class="page-link" ng-click="selectPage(1)">First</a> </li>
+        <li class="page-item"><a class="page-link" ng-click="selectPage(currentPage - 1)"><i class="fas fa-caret-left"></i></a></li>
+        <li class="page-item"><a class="page-link"><page-select></page-select> of <span ng-bind="numPages"></span></a></li>
+        <li class="page-item"><a class="page-link" ng-click="selectPage(currentPage + 1)"><span class="fas fa-caret-right"></span></a></li>
+        <li><a class="page-link" ng-click="selectPage(numPages)">Last</a></li>
     </ul>
     <div><span ng-bind="totalItemCount"></span> Records</div>
 </nav>
