--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,12 +1,11 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css";
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css';
 @import "https://use.fontawesome.com/releases/v5.0.12/css/all.css";
-@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css';
-@import 'core/custombootstrap';
+@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css";
 @import 'https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css';
 @import './node_modules/intro.js/introjs';
 @import './node_modules/intro.js/themes/introjs-nassim';
+@import 'core/custombootstrap';
 
-// @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 @import "core/msk_colors";
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -23,7 +22,6 @@
 		}
 	}
 
-	// @import "./node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 	// @import "core/responsivemedia";
 	// @import "_partials/pagination.component";
 
